Add validation to recipe entity and refactor tests